# sgct

./: .gitattributes  .gitignore  .gitmodules  Attribution.txt  CMakeLists - Copy.txt  CMakeLists.txt  CMakeLists_old.txt  CMakePresets.json  Doxyfile  Doxyfile.in  EULA.rtf  EXTERNAL_LICENSE.md  Jenkinsfile  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  changelog.txt  developer_notes.txt  installer_readme.txt  license.txt  linux_32bit_toolchain.txt  mingw_32bit_toolchain.txt  run_doxygen.bat  sgct.schema.json  sgct32.sln  vcpkg.json
additional_deps/freealut-1.1.0-src/: CMakeLists.txt  CMakeLists_orig.txt
apps/: CMakeLists.txt
apps/calibrator/: CMakeLists.txt  main.cpp
apps/clustertest/: CMakeLists.txt  main.cpp
apps/datatransfer/: CMakeLists.txt  box.cpp  main.cpp
apps/domeimageviewer/: CMakeLists.txt  dome.cpp  dome.h  main.cpp  two_nodes.xml
apps/example1/: CMakeLists.txt  main.cpp
apps/ffmpegcapture/: CMakeLists.txt  capture.cpp  capture.h  main.cpp
apps/ffmpegcaptureanddomeimageviewer/: CMakeLists.txt  README.md  capture.cpp  capture.h  main.cpp
apps/gamepad/: CMakeLists.txt  main.cpp
apps/heightmapping/: CMakeLists.txt  main.cpp
apps/multiplerendertargets/: CMakeLists.txt  box.cpp  box.h  main.cpp
apps/network/: CMakeLists.txt  box.cpp  main.cpp
apps/omnistereo/: CMakeLists.txt  box.cpp  domegrid.cpp  domegrid.h  main.cpp  test.xml
apps/simplenavigation/: CMakeLists.txt  main.cpp  single_fisheye.xml
apps/sound/: CMakeLists.txt  main.cpp
apps/spout/: CMakeLists.txt  box.cpp  box.h  main.cpp
apps/spoutbrowser/: CMakeLists.txt  box.cpp  box.h  main.cpp
apps/spoutscreenshot/: CMakeLists.txt  main.cpp
apps/spoutsender/: CMakeLists.txt  box.cpp  main.cpp
apps/stitcher/: CMakeLists.txt  main.cpp  test_mono.bat
example1/: CMakeLists.txt  example1.cbp  example1.vcxproj  main.cpp  run_local_master.bat  run_local_slave.bat  run_single.bat  two_nodes.xml
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glew/: mingw_compile.bat
ext/gstreamer/: CMakeLists.txt  copy_gstreamer_libs.cmake  gstreamerWebRTC.h
ext/isense/: isense.h
ext/lpng/: CMakeLists.txt
ext/ndi/: CMakeLists.txt
ext/scalable/: CMakeLists.txt  EasyBlendSDK.h  mplEasyBlendSDK.lib
ext/spout/: SpoutLibraryWrap.h  SpoutLibraryWrapper.h
ext/tinyxml2/: CMakeLists.txt  tinyxml2.cpp  xmltest.cpp
ext/vrpn/: CMakeLists.txt  vrpn_Connection.C
ext/zlib/: CMakeLists.txt  mingw_compile.bat
release/: CMakeLists.txt  build_release_linux.sh  build_release_linux.sh.in  build_release_xcode.sh  build_release_xcode.sh.in  build_release_xcode_cpp11.sh  build_release_xcode_cpp11.sh.in  readme.txt  remove_svn_on_unix.txt  remove_unwanted_files_on_unix.txt
src/: CMakeLists.txt  SGCTVersion.h.in  baseviewport.cpp  clustermanager.cpp  commandline.cpp  config.cpp  config.h.in  correctionmesh.cpp  engine.cpp  error.cpp  font.cpp  fontmanager.cpp  freetype.cpp  image.cpp  log.cpp  math.cpp  mpcdi.cpp  network.cpp  networkmanager.cpp  node.cpp  offscreenbuffer.cpp  openvr.cpp  openxr.cpp  profiling.cpp  projection.cpp  readconfig.cpp  screencapture.cpp  scripts.txt  settings.cpp  shadermanager.cpp  shaderprogram.cpp  shareddata.cpp  statisticsrenderer.cpp  texturemanager.cpp  tracker.cpp  trackingdevice.cpp  trackingmanager.cpp  user.cpp  version.h.in  viewport.cpp  (+2 more)
src/apps/: CMakeLists.txt
src/correction/: domeprojection.cpp  mpcdimesh.cpp  obj.cpp  paulbourke.cpp  pfm.cpp  scalable.cpp  sciss.cpp  simcad.cpp  skyskan.cpp
src/installers/: C-Student_wiki.url  License.rtf  SGCT_tutorials.url  sgct_osg_all_win.nsi  sgct_osg_all_win.nsi.in  sgct_osg_mingw.nsi  sgct_osg_msvc10.nsi  sgct_osg_msvc9.nsi
src/other/: framelock_demo.c  framelock_demo.vcproj  framelock_demo_ip.c
src/projection/: cubemap.cpp  cylindrical.cpp  equirectangular.cpp  fisheye.cpp  nonlinearprojection.cpp  projectionplane.cpp  sphericalmirror.cpp  spout.cpp  spoutflat.cpp
src/projects/: default.workspace  readme.txt  sgct.cbp  sgct32_all_apps_msvc10.sln  sgct32_all_apps_msvc11.sln  sgct32_all_apps_msvc9.sln  sgct32_msvc10.vcxproj  sgct32_msvc10.vcxproj.filters  sgct32_msvc11.sln  sgct32_msvc11.vcxproj  sgct32_msvc11.vcxproj.filters  sgct32_msvc9.sln  sgct32_msvc9.vcproj  sgct_linux.cbp  sgct_linux_32.cbp  sgct_mac.cbp  sgct_mingw.workspace  sgct_mingw_x64.workspace  sgct_msvc10.sln  sgct_msvc10.vcxproj  sgct_msvc10.vcxproj.filters  sgct_msvc12.sln  sgct_msvc12.vcxproj  sgct_msvc12_all_apps.sln  sgct_msvc14_all_apps.sln
src/sgct/: BaseViewport.cpp  CMakeLists.txt  ClusterManager.cpp  CorrectionMesh.cpp  Engine.cpp  FisheyeProjection.cpp  FisheyeViewport.cpp  Font.cpp  FontManager.cpp  Image.cpp  MessageHandler.cpp  NetworkManager.cpp  NonLinearProjection.cpp  OffScreenBuffer.cpp  PostFX.cpp  ReadConfig.cpp  SGCTMpcdi.cpp  SGCTMutexManager.cpp  SGCTNetwork.cpp  SGCTNode.cpp  SGCTOpenVR.cpp  SGCTProjection.cpp  SGCTProjectionPlane.cpp  SGCTSettings.cpp  SGCTTracker.cpp  SGCTTracking.cpp  SGCTUser.cpp  (+66 more)
tests/: CMakeLists.txt  equality.cpp  equality.h  main.cpp  schema.h  test_config_examples.cpp  test_config_load.cpp  test_config_load_capture.cpp  test_config_load_cluster.cpp  test_config_load_cubemapprojection.cpp  test_config_load_cylindricalprojection.cpp  test_config_load_equirectangularprojection.cpp  test_config_load_fisheyeprojection.cpp  test_config_load_generatorversion.cpp  test_config_load_meta.cpp  test_config_load_node.cpp  test_config_load_planarprojection.cpp  test_config_load_projectionplane.cpp  test_config_load_scene.cpp  test_config_load_settings.cpp  test_config_load_sphericalmirrorprojection.cpp  test_config_load_texturemappedprojection.cpp  test_config_load_tracker.cpp  test_config_load_user.cpp  test_config_load_viewport.cpp  test_config_load_window.cpp  test_config_parse.cpp  test_config_required_parameters.cpp  test_config_required_parameters_schema.cpp  test_config_required_parameters_schema.hpp  test_config_roundtrip.cpp  test_config_validate.cpp
ver2/: Attribution.txt  CMakeLists.txt  CMakeLists_old.txt  Doxyfile  changelog.txt  cpp11.txt  developer_notes.txt  run_doxygen.bat
(+2444 files in other folders)
