# Copyright Linkoping University 2011
# SGCT Project Authors see Authors.txt

cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(SGCT_Examples)

option(SGCT_EXAMPLES_OSG "Build OSG examples" OFF)
option(SGCT_EXAMPLES_AL "Build OpenAL examples" OFF)

if( APPLE  )
	option(SGCT_CPP11 "Use libc++ instead of libstdc++" ON)
	set(CMAKE_OSX_ARCHITECTURES "x86_64")
	if(CMAKE_GENERATOR STREQUAL Xcode)
		set(CMAKE_OSX_DEPLOYMENT_TARGET "10.9")
	endif()
endif()

ADD_SUBDIRECTORY(examples/clustertest)
ADD_SUBDIRECTORY(examples/example1)
ADD_SUBDIRECTORY(examples/example1_opengl3)
ADD_SUBDIRECTORY(examples/gamepadExample)
ADD_SUBDIRECTORY(examples/depthBuffer)
ADD_SUBDIRECTORY(examples/heightMappingExample)
ADD_SUBDIRECTORY(examples/heightMappingExample_opengl3)
ADD_SUBDIRECTORY(examples/kinectExample)
if(SGCT_EXAMPLES_OSG)
	ADD_SUBDIRECTORY(examples/osgExample)
	ADD_SUBDIRECTORY(examples/osgExampleRTT)
endif()
ADD_SUBDIRECTORY(examples/postFXExample)
ADD_SUBDIRECTORY(examples/postFXExample_opengl3)
ADD_SUBDIRECTORY(examples/renderToTexture)
ADD_SUBDIRECTORY(examples/sgct_template)
ADD_SUBDIRECTORY(examples/SGCTRemote)
ADD_SUBDIRECTORY(examples/simpleNavigationExample)
ADD_SUBDIRECTORY(examples/simpleNavigationExample_opengl3)
ADD_SUBDIRECTORY(examples/simpleShaderExample)
ADD_SUBDIRECTORY(examples/simpleShaderExample_opengl3)
if(SGCT_EXAMPLES_AL)
	ADD_SUBDIRECTORY(examples/soundExample)
endif()
ADD_SUBDIRECTORY(examples/textureExample)
ADD_SUBDIRECTORY(examples/textureExample_opengl3)
ADD_SUBDIRECTORY(examples/trackingExample)
ADD_SUBDIRECTORY(examples/MRTExample)
ADD_SUBDIRECTORY(examples/MRTExample_opengl3)

if( WIN32 )
	add_definitions(-D__WIN32__)
	if( MINGW )
		set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
	endif()
elseif( APPLE  )
	add_definitions(-D__APPLE__)
	if(SGCT_CPP11)
		set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ ${CMAKE_CXX_FLAGS}")
	else()
		set(CMAKE_CXX_FLAGS "-std=c++0x -stdlib=libstdc++ ${CMAKE_CXX_FLAGS}")
	endif()
else()
	add_definitions(-D__LINUX__)
	set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
endif()
	
#if( CMAKE_COMPILER_IS_GNUCXX )
#	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++ -static")
#endif()